<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/appprofile"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:layout_marginLeft="15dp"
        app:cardCornerRadius="25dp"
        app:cardPreventCornerOverlap="false"
        android:layout_marginBottom="5dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/mandirilogo"
            android:scaleType="centerCrop"/>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/apptitle"
        android:textColor="@color/blue"
        android:textSize="22dp"
        android:textStyle="bold"
        android:layout_toRightOf="@id/appprofile"
        android:layout_alignParentRight="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/appprofile">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/beritaterkini"
            android:layout_marginLeft="10dp"
            android:text="@string/titleberitaterkini"
            android:textColor="@color/blue"
            android:textSize="18dp"
            android:clickable="true"
            android:onClick="openTopNewsPage"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/semuaberita"
            android:layout_marginLeft="10dp"
            android:text="@string/titlesemuaberita"
            android:textColor="@color/blue"
            android:textSize="18dp"
            android:clickable="true"
            android:onClick="openAllNewsPage"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewAllNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bottom_background"
        android:backgroundTint="@color/blue"
        android:elevation="2dp"
        android:outlineAmbientShadowColor="@color/blue"
        android:outlineSpotShadowColor="@color/blue"
        app:itemIconTint="@color/white"
        app:itemRippleColor="@color/blue"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" />
</RelativeLayout>
