<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailAllNews">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-31dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="448dp"
            android:layout_height="253dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/titleDetail"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/titleDetail"
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:layout_below="@id/authorTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:text="judul"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Description"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@id/titleDetail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/Description"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:layout_below="@id/Description"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:scrollbars="vertical"
            android:text="description"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Content"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@id/desc"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/Content"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:layout_below="@id/Content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:scrollbars="vertical"
            android:text="contentberita"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/authorTextView"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_below="@+id/imageView"
            android:layout_alignEnd="@id/titleDetail"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="200dp"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/user_symbol"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_below="@+id/imageView"
            android:layout_marginEnd="-50dp"
            android:layout_marginTop="3dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/authorTextView"
            android:src="@drawable/user" />

        <ImageView
            android:id="@+id/calendar"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="3dp"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="-160dp"
            android:layout_toEndOf="@id/authorTextView"
            android:layout_toRightOf="@id/authorTextView"
            android:src="@drawable/calendar" />

        <TextView
            android:id="@+id/publish_news"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/calendar"
            android:layout_toRightOf="@id/calendar"
            android:layout_alignParentRight="true"
            android:textSize="13sp" />

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@id/content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="120dp"
            android:text="@string/detailnews"
            android:id="@+id/urlnews"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:textSize="12dp"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>